assert-struct/tests/snapshots/tuples__enum_tuple_two_errors.snap
---
source: assert-struct/tests/tuples.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/tuples_errors/enum_two_errors.rs:25:36
   |
25 |             current: Message::Pair(100, "expected"),  // Both fields wrong
   |                                    ^^^  ^^^^^^^^^^ got "actual"
   |                                    |
   |                                    got 50
